--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="h-screen w-screen bg-linear-to-br from-black to-neutral-600 flex justify-center items-center">
-    <h1 class="text-4xl font-bold font-serif">hello there!</h1>
+<div class="h-screen w-screen bg-linear-to-br from-black to-neutral-600 flex flex-col justify-center items-center">
+
+    <h1 class="text-3xl mb-10">My Angular 19 App - Task Manager</h1>
+    <app-task-list></app-task-list>
+
 </div>
